test/files/neg/t3115b.check
t3115b.scala:17: warning: class C in package p is deprecated in package p (since 0.9-RC1): we won't use this package any more
    def k = new C()    // deprecated
                ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
